Usepackage Environment Manager
Copyright (C) 1995-2014  Jonathan Hogg  <me@jonathanhogg.com>
   
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software 
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

Changes between usepackage version 1.11 and 1.12

* More code updating, this time to fix an inclusion bug related to very
  old-school usage of flex.

Changes between usepackage version 1.10 and 1.11

* The code was updated a fair bit to match more modern autoconf/automake
  and C99 standards (it's really starting to show its age).

Changes between usepackage version 1.8 and 1.10

* Now supports shell-independent aliases using 'alias foo = bar' syntax.
* Now supports adding path segments at the end using the new "=+"
  syntax (courtesy of Chandler Wilkerson).
* Skipping 1.9 version number as I never did a real release of it and
  I added the alias stuff afterwards anyway.

Changes between usepackage version 1.7 and 1.8

* Now supports basic checking for existence of directories before adding
  them to a path (or setting a variable) using the new "?=" and "?+="
  operators.
* The order that variables are sourced into the environment has been
  changed to better support using other variables as parts of updates
  to the environment (e.g., "FOO=/opt/foo, PATH+=$FOO/bin;").

Changes between usepackage version 1.6.3 and 1.7

* Now supports arbitrary inclusions into the shell evaluation text,