@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # Usepackage Environment Manager
-# Copyright (C) 1995-2014  Jonathan Hogg  <jonathan@onegoodidea.com>
+# Copyright (C) 1995-2015  Jonathan Hogg  <me@jonathanhogg.com>
 #  
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
