@@ -1,5 +1,5 @@
 # Usepackage Environment Manager
-# Copyright (C) 1995-2014  Jonathan Hogg  <jonathan@onegoodidea.com>
+# Copyright (C) 1995-2015  Jonathan Hogg  <me@jonathanhogg.com>
 #  
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 # along with this program; if not, write to the Free Software 
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_INIT(usepackage,1.12,me@jonathanhogg.com,usepackage)
+AC_INIT(usepackage,1.13,me@jonathanhogg.com,usepackage)
 AM_INIT_AUTOMAKE
 
 AM_CONFIG_HEADER(config.h)
@@ -34,7 +34,7 @@ AC_CHECK_HEADER(dirent.h)
 AH_VERBATIM([COPYRIGHT],
 [/* Copyright string for the executable. */
 #ifndef COPYRIGHT
-# define COPYRIGHT "Copyright (C) 1995-2014  Jonathan Hogg"
+# define COPYRIGHT "Copyright (C) 1995-2015  Jonathan Hogg  <me@jonathanhogg.com>"
 #endif])
 
 AC_OUTPUT(Makefile)
